# lilweirdo

./: .env  .gitignore  Makefile  README.md  main.py  pyproject.toml
src/: chain.py  consts.py  discordweirdo.py  keeper.py  main.py  sicko.py  templater.py
